[package]
name = "tiktoken"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "_tiktoken"
crate-type = ["dylib"]
#crate-type = ["staticlib"]

[dependencies]
libc = { version = "0.2.138" }

# tiktoken dependencies
fancy-regex = "0.10.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"

[profile.release]
incremental = true
